# LebiNetX

./: README.md  Screencast From 2025-12-28 14-23-53.webm
backend/api/: .gitignore  main.py  precommit.yaml  pyproject.toml  requirements.txt
backend/api/_ai/: __init__.py  ai_ops.py
backend/api/_api/: main.py
backend/api/_api/response_models/: __init__.py
backend/api/_api/routers/: __init__.py  comment.py  post.py  reaction.py  user.py
backend/api/_daemon/: deploy-process.md  start_daemon.example.sh
backend/api/_db/: PASSWORDS.example.py  __init__.py  deploy-process.md  orm_ops.py
backend/api/_db/db_models/: __init__.py
backend/api/_fastapi/: main.py
backend/api/_fastapi/response_models/: __init__.py
backend/api/_uvicorn/: main.py
backend/api/consts/: __init__.py
backend/api/logger/: __init__.py
backend/api/logs/: start_log.txt
backend/api/mariadb/: PASSWORDS.example.py  __init__.py  deploy-process.md  orm_ops.py
backend/api/mariadb/db_models/: __init__.py
backend/nginx/: nginx.conf
frontend/frontend-app/: package-lock.json  package.json
frontend/frontend-app/public/: index.html
frontend/frontend-app/src/: App.js  global.css  index.js
frontend/frontend-app/src/Components/Pages/Home/: Home.jsx
frontend/frontend-app/src/Components/Pages/Menu/: Menu.css  Menu.jsx
frontend/frontend-app/src/Components/Pages/NewPost/: NewPost.css  NewPost.jsx
frontend/frontend-app/src/Components/Pages/Post/: Post.css  Post.jsx
frontend/frontend-app/src/Components/Pages/Posts/: Posts.css  Posts.jsx
prospect/: mariadb.md  prospect.md  stack.md
(+7 files in other folders)
